--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-<h1> This is Steve's website </h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Valentine</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <img src="Love.gif" alt="Love" loop />
+    <h1 id="h1">Will you be my valentine? :D</h1>
+    <div class="buttons-container">
+      <div class="yes-container">
+        <button id="yes">Yes</button>
+      </div>
+      <button id="no">No</button>
+    </div>
 
-<p>Hello world</p>
+    <script src="script.js"></script>
+  </body>
+</html>
